--- a/Budget/Budget/Pages/HistoryPage.xaml
+++ b/Budget/Budget/Pages/HistoryPage.xaml
@@ -6,29 +6,39 @@
              mc:Ignorable="d"
              x:Class="Budget.Pages.HistoryPage">
     <ContentPage.Content>
-        <ListView x:Name="listView"
+        <StackLayout>
+
+            <ListView x:Name="listView"
               Margin="20"
               ItemSelected="OnListViewItemSelected">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="30*" />
-                                <ColumnDefinition Width="30*" />
-                                <ColumnDefinition Width="30*" />
-                            </Grid.ColumnDefinitions>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="30*" />
+                                    <ColumnDefinition Width="30*" />
+                                    <ColumnDefinition Width="30*" />
+                                </Grid.ColumnDefinitions>
 
-                            <Label  Grid.Column="0" Text="{Binding Description}"/>
-                            <Label  Grid.Column="1" Text="{Binding Amount, StringFormat='{0:C2}'}"/>
-                            <Label Grid.Column="2" Text="{Binding Date, StringFormat='{0:MMMM dd, yyyy}'}"/>
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+                                <Label  Grid.Column="0" Text="{Binding Description}"/>
+                                <Label  Grid.Column="1" Text="{Binding Amount, StringFormat='{0:C2}'}"/>
+                                <Label Grid.Column="2" Text="{Binding Date, StringFormat='{0:MMMM dd, yyyy}'}"/>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
+            <Button Text="See Monthly Summaries"
+                Clicked="OnSummariesClicked"
+                TextColor="CornflowerBlue"
+                FontSize="Small"
+                FontAttributes="Italic"
+                BackgroundColor="White" />
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
