--- a/Budget/src/app/components/home/home.component.html
+++ b/Budget/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -6,14 +7,28 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container" class="ion-padding">
-    <ion-card>
+  <div id="container">
+    <ion-card-header>
+      <ion-card-subtitle>Amount spent this month</ion-card-subtitle>
+      <ion-card-title>{{monthLabel}}</ion-card-title>
+    </ion-card-header>
+    <canvas #paymentsChart width="400" height="400"></canvas>
+
+    <ion-card *ngIf="currentMonthStanding" class="transactions">
       <ion-card-header>
-        <ion-card-subtitle>Amount spent this month</ion-card-subtitle>
-        <ion-card-title>{{monthLabel}}</ion-card-title>
+        <ion-card-subtitle>Recent Transactions</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
-        <canvas #paymentsChart width="400" height="400"></canvas>
+        <ion-list>
+          <ion-item *ngFor="let payment of currentMonthStanding?.payments">
+            <ion-label>
+              <ion-text [style.color]="getBudgetCategoryColor(payment.category)">
+                <h3>{{ getBudgetCategoryName(payment.category) }} <span class="time-stamp">{{ payment.timeStamp | momentDate:'l' }}</span></h3>
+              </ion-text>
+              <p>{{ payment.amount | currency }}</p>
+            </ion-label>
+          </ion-item>
+        </ion-list>
       </ion-card-content>
     </ion-card>
   </div>
