--- a/Budget/src/global.scss
+++ b/Budget/src/global.scss
@@ -31,10 +31,10 @@ ion-menu-button {
   
   #container {
     text-align: center;
-    position: absolute;
+    position: relative;
     left: 0;
     right: 0;
-    top: 50%;
+    top: 440px;
     transform: translateY(-50%);
   }
   
