--- a/Budget/src/app/components/profile/profile.component.html
+++ b/Budget/src/app/components/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [title]="'Profile'"></app-header>
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
