--- a/Budget/src/app/components/profile/profile.component.html
+++ b/Budget/src/app/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-header [title]="'Profile'"></app-header>
-<ion-content [fullscreen]="true">
+<ion-content class="content">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Profile</ion-title>
@@ -7,7 +7,6 @@
   </ion-header>
 
   <div id="container">
-    <strong class="capitalize">Profile</strong>
-    <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    
   </div>
 </ion-content>
