Sort Recent Transactions

--- a/Budget/src/app/components/home/home.component.html
+++ b/Budget/src/app/components/home/home.component.html
@@ -43,7 +43,7 @@
       </ion-card-header>
       <ion-card-content>
         <ion-list>
-          <ion-item *ngFor="let payment of currentMonthStanding.payments">
+          <ion-item *ngFor="let payment of sortPayments()">
             <ion-label>
               <ion-badge [style.background-color]="getBudgetCategoryColor(payment.category)">
                 {{ getBudgetCategoryName(payment.category) }}</ion-badge>
