--- a/Budget/src/app/components/profile/profile.component.html
+++ b/Budget/src/app/components/profile/profile.component.html
@@ -2,11 +2,16 @@
 <ion-content class="content">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Profile</ion-title>
+      <ion-title size="large">{{profile.name}}</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <div id="container">
-    
+    <!-- Month's spending pie chart -->
+    <ion-card-header>
+      <ion-card-subtitle>Amount spent this month</ion-card-subtitle>
+      <ion-card-title>{{monthLabel}}</ion-card-title>
+    </ion-card-header>
+    <canvas #paymentsChart width="400" height="400"></canvas>
   </div>
 </ion-content>
