--- a/Budget/src/app/components/home/home.component.html
+++ b/Budget/src/app/components/home/home.component.html
@@ -39,21 +39,6 @@
     </ion-card>
 
     <!-- Recent Transactions -->
-    <ion-card *ngIf="currentMonthStanding" class="transactions">
-      <ion-card-header>
-        <ion-card-subtitle>Recent Transactions</ion-card-subtitle>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-list>
-          <ion-item *ngFor="let payment of sortPayments()">
-            <ion-label>
-              <ion-badge [style.background-color]="getBudgetCategoryColor(payment.category)">
-                {{ getBudgetCategoryName(payment.category) }}</ion-badge>
-              <p>{{ payment.amount | currency }} <span class="time-stamp">{{ payment.timeStamp | momentDate:'l' }}</span></p>
-            </ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-card-content>
-    </ion-card>
+    <app-recent-transactions *ngIf="currentMonthStanding" [payments]="currentMonthStanding.payments"></app-recent-transactions>
   </div>
 </ion-content>
