Bug Fix: store amount as number on Windows

--- a/Budget/src/app/components/home/home.component.html
+++ b/Budget/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-input inputmode="decimal" name="amount" clearInput placeholder="$0.00" [(ngModel)]="newPayment.amount">
+        <ion-input type="number" inputmode="decimal" name="amount" clearInput placeholder="$0.00" [(ngModel)]="newPayment.amount">
         </ion-input>
       </ion-item>
       <div class="ion-padding">
