--- a/Budget/src/app/components/home/home.component.html
+++ b/Budget/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
         </ion-input>
       </ion-item>
       <div class="ion-padding">
-        <ion-button expand="block" class="ion-no-margin" (click)="addPayment()">Add</ion-button>
+        <ion-button color="secondary" expand="block" class="ion-no-margin" (click)="addPayment()">Add</ion-button>
       </div>
     </ion-card>
 
